# vibetest

./: .env.example  .gitignore  README.md  list_model_names.py  list_models.py  mcp.json  model_names.txt  pyproject.toml  test_agent3.py  test_agent3_naming.py
data/: README.md
data/legacy/: 20251126_173144_models_gemini-2.0-flash.json  20251126_200720_models_gemini-2.0-flash.json  20251126_204333_models_gemini-2.5-flash.json
data/results/: .gitkeep  20251127_234030_vibetester.json  20251127_234126_vibetester.json  20251128_125603_vibetester.json  20251128_125901_vibetester.json  20251128_130649_vibetester.json  20251128_131505_vibetester_multiplayer_game_zv997r-8000.json  20251128_132305_vibetester_pitch-humanity-simple_zv997r-8000.json  20251128_174507_vibetester_pitch-humanity-simple_zv997r-8000.json  20251128_191112_vibetester_pitch-humanity-simple_zv997r-8000.json  20251128_205437_vibetester_pitch-humanity-simple_zv997r-8000.json  20251128_215332_vibetester_pitch-humanity-simple_zv997r-8000.json  20251128_220209_vibetester_pitch-humanity-simple_zv997r-8000.json  20251128_221403_agent1.json  20251201_210707_vibetester_pitch-humanity-simple_zv997r-8000.json  20251201_220334_vibetester_pitch-humanity-simple_zv997r-8000.json  20251201_232923_vibetester_Blackjack_Feature_Development_localhost.json  20251202_145411_vibetester_Blackjack_Feature_Development_localhost.json  (+21 more)
src/: AGENT_PROMPT.py  agent1.py  agent1_prompt.py  browser-control.py  browser-use.py  experiment_logger.py  llm_providers.py  main.py  sample_conversation.py  tools.py
(+9 files in other folders)
